--- a/index.html
+++ b/index.html
@@ -69,7 +69,11 @@
     </section>
 
     <footer class="footer">
-      <p>Singaw Sity • Bronzed Derby • v0.1</p>
+      <p>
+  Singaw Sity • Bronzed Derby • v0.1<br/>
+  A listening room. Manual execution is valid.
+</p>
+
     </footer>
 
   </main>
