--- a/index.html
+++ b/index.html
@@ -3,79 +3,48 @@
 <head>
   <meta charset="UTF-8" />
   <title>Bronzed Derby Lounge</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-  <main class="derby">
+  <main class="lounge">
+    <h1>The Bronzed Derby Lounge</h1>
+    <p class="subtitle">
+      A listening room inside Singaw Sity.<br />
+      Every order becomes a scene.
+    </p>
 
-    <header class="header">
-      <h1>Bronzed Derby Lounge</h1>
-      <p class="subtitle">
-        A listening room inside Singaw Sity.  
-        Place an order. Receive a scene, an image, and a sound.
-      </p>
-    </header>
-
-    <section class="selectors">
-
-      <div class="block">
-        <h2>Choose a Booth</h2>
-        <div class="buttons">
-          <button>Booth 3</button>
-          <button>Booth 6</button>
-          <button>Booth 9</button>
-        </div>
+    <section class="controls">
+      <h2>Choose a Booth</h2>
+      <div class="buttons">
+        <button>Booth 3 — Rust Talk</button>
+        <button>Booth 6 — Presence</button>
+        <button>Booth 9 — Existential Search</button>
       </div>
 
-      <div class="block">
-        <h2>Choose a Vibe</h2>
-        <div class="buttons vibe">
-          <button>Sax</button>
-          <button>Mushrooms</button>
-          <button>Spirals</button>
-          <button>Vines</button>
-          <button>Bowler Hats</button>
-          <button>Robot</button>
-        </div>
+      <h2>Choose a Vibe</h2>
+      <div class="buttons">
+        <button>Sax</button>
+        <button>Mushrooms</button>
+        <button>Spirals</button>
+        <button>Vines</button>
+        <button>Bowler Hats</button>
+        <button>Robot</button>
       </div>
-
     </section>
 
     <section class="order">
-      <h2>One Detail to Include</h2>
-      <textarea placeholder="One sentence. Nothing more."></textarea>
-      <button class="cta">Place an Order</button>
-      <p class="confirmation">
-        Order received. The bartender is working.
-      </p>
+      <h2>Place an Order</h2>
+      <p>One sentence. No explanations.</p>
+      <textarea placeholder="One detail to include..."></textarea>
+      <br />
+      <button class="order-btn">Place Order</button>
+      <p class="confirmation">The bartender is working.</p>
     </section>
 
-    <section class="rules">
-      <h3>House Rules</h3>
-      <ul>
-        <li>Be kind.</li>
-        <li>No personal data.</li>
-        <li>Stay in-world.</li>
-      </ul>
-    </section>
-
-    <section class="tonight">
-      <h3>Tonight’s Set</h3>
-      <p class="muted">
-        The room is warming up.
-      </p>
-    </section>
-
-    <footer class="footer">
-      <p>
-  Singaw Sity • Bronzed Derby • v0.1<br/>
-  A listening room. Manual execution is valid.
-</p>
-
+    <footer>
+      <p>Be kind. No personal data. Stay in-world.</p>
     </footer>
-
   </main>
 
 </body>
