--- a/index.html
+++ b/index.html
@@ -16,29 +16,30 @@
 
     <section class="controls">
       <h2>Choose a Booth</h2>
-      <div class="buttons">
-        <button>Booth 3 — Rust Talk</button>
-        <button>Booth 6 — Presence</button>
-        <button>Booth 9 — Existential Search</button>
-      </div>
-
+      <div class="buttons" id="booths">
+  <button data-booth="3">Booth 3 — Rust Talk</button>
+  <button data-booth="6">Booth 6 — Presence</button>
+  <button data-booth="9">Booth 9 — Existential Search</button>
+</div>
       <h2>Choose a Vibe</h2>
-      <div class="buttons">
-        <button>Sax</button>
-        <button>Mushrooms</button>
-        <button>Spirals</button>
-        <button>Vines</button>
-        <button>Bowler Hats</button>
-        <button>Robot</button>
-      </div>
+      <div class="buttons" id="vibes">
+  <button data-vibe="Sax">Sax</button>
+  <button data-vibe="Mushrooms">Mushrooms</button>
+  <button data-vibe="Spirals">Spirals</button>
+  <button data-vibe="Vines">Vines</button>
+  <button data-vibe="Bowler Hats">Bowler Hats</button>
+  <button data-vibe="Robot">Robot</button>
+</div>
     </section>
 
     <section class="order">
       <h2>Place an Order</h2>
+      <pre id="ticket" class="ticket" aria-live="polite"></pre>
+<button id="copyBtn" class="order-btn" style="display:none;">Copy Ticket</button>
       <p>One sentence. No explanations.</p>
-      <textarea placeholder="One detail to include..."></textarea>
+      <textarea id="detail" placeholder="One detail to include..."></textarea>
       <br />
-      <button class="order-btn">Place Order</button>
+      <button id="placeOrder" class="order-btn">Place Order</button>
       <p class="confirmation">The bartender is working.</p>
     </section>
 
